--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -292,11 +292,25 @@
 @media screen and (min-width: 300px) and (max-width: 450px) {
 	.menu ul a {
 		font-size: 4rem;
+		padding: 35px;
 	}
 
+	.hamburger,
 	.exitResponsive {
-		margin-left: 10%;
 		color: $off-white;
+	}
+
+	.hamburger {
+		padding-top: 75px;
+	}
+
+	.logo {
+		margin-top: 50px;
+	}
+
+	.teamImage img {
+		width: 300px;
+		height: 300px;
 	}
 
 	.carousel-cell {
@@ -319,6 +333,25 @@
 
 	.contact {
 		margin: auto;
+		input,
+		select,
+		textarea {
+			width: 275px;
+		}
+		.formInfo {
+			p {
+				line-height: 1.3;
+				padding-top: 15px;
+			}
+			h3 {
+				font-style: unset;
+				line-height: 1.2;
+			}
+		}
+	}
+
+	.contactContainer {
+		padding: 25px 0;
 	}
 
 	.googleMap iframe {
@@ -332,5 +365,12 @@
 		a {
 			font-size: 1.4rem;
 		}
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.googleMap iframe {
+		max-width: 275px;
+		max-height: 275px;
 	}
 }
