--- a/styles/style.css
+++ b/styles/style.css
@@ -1250,10 +1250,21 @@ footer a:hover {
 @media screen and (min-width: 300px) and (max-width: 450px) {
   .menu ul a {
     font-size: 4rem;
+    padding: 35px;
   }
+  .hamburger,
   .exitResponsive {
-    margin-left: 10%;
     color: #f5f5f5;
+  }
+  .hamburger {
+    padding-top: 75px;
+  }
+  .logo {
+    margin-top: 50px;
+  }
+  .teamImage img {
+    width: 300px;
+    height: 300px;
   }
   .carousel-cell {
     height: 300px;
@@ -1272,6 +1283,22 @@ footer a:hover {
   .contact {
     margin: auto;
   }
+  .contact input,
+  .contact select,
+  .contact textarea {
+    width: 275px;
+  }
+  .contact .formInfo p {
+    line-height: 1.3;
+    padding-top: 15px;
+  }
+  .contact .formInfo h3 {
+    font-style: unset;
+    line-height: 1.2;
+  }
+  .contactContainer {
+    padding: 25px 0;
+  }
   .googleMap iframe {
     padding-top: 20px;
     max-width: 300px;
@@ -1280,6 +1307,13 @@ footer a:hover {
   footer p,
   footer a {
     font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .googleMap iframe {
+    max-width: 275px;
+    max-height: 275px;
   }
 }
 /*# sourceMappingURL=style.css.map */
